tests/stable/misc/compile_fail/duplicate_forward.stderr
error: duplicate `forward` attribute

  = help: there can be just one location, try removing the wrong one

  --> $DIR/duplicate_forward.rs:22:6
   |
22 |     #[forward(other_nested)]
   |      ^^^^^^^^^^^^^^^^^^^^^^^
